# opentutor-classifier

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.evaluate  Dockerfile.extract_config  Dockerfile.train_job  Dockerfile.training_config  Dockerfile.training_data  Makefile  README.md  classifier_train.py  ideal_answers  license-ignore.txt  models  mypy.ini  old_Dockerfile.check_model  old_requirements-check_model.txt  package-lock.json  package.json  pyproject.toml  requirements-extract_config.txt  requirements-train_job.txt  requirements.test.txt  requirements.txt  serverless.yml  setup.py
opentutor_classifier/: .coveragerc  .dockerignore  .flake8  Dockerfile  Makefile  OT_LLM_Comparison.csv  OT_LLM_Comparison_Final.csv  README.md  SVM_Class.py  __init__.py  api.py  dispatcher_model.py  multi_exp_classifier.py  mypy.ini  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt  setup.py  svm.py  svm_classifier.py  sync.py
opentutor_classifier/opentutor_classifier/: __init__.py  api.py  camelcase.py  classifier_dao.py  config.py  constants.py  dao.py  log.py  logger.py  sentence_transformer.py  spacy_model.py  spacy_preprocessor.py  speechact.py  stopwords.py  sync.py  training.py  utils.py  word2vec.py  word2vec_wrapper.py
opentutor_classifier/opentutor_classifier/composite/: __init__.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr/: __init__.py  clustering_features.py  constants.py  dtos.py  expectations.py  features.py  optimal_clusters.py  predict.py  train.py  utils.py
opentutor_classifier/opentutor_classifier/lr2/: __init__.py  clustering_features.py  constants.py  dtos.py  expectations.py  features.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr_bert_emb/: __init__.py  clustering_features.py  constants.py  expectations.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr_emb_diff/: __init__.py  clustering_features.py  expectations.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr_new/: __init__.py  expectations.py  features.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr_regex_ensemble/: __init__.py  expectations.py  features.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr_trans_emb/: __init__.py  clustering_features.py  expectations.py  features.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/lr_trans_emb_diff/: __init__.py  constants.py  expectations.py  features.py  predict.py  sentence_transformer.py  train.py
opentutor_classifier/opentutor_classifier/lr_transformer_emb/: __init__.py  expectations.py  features.py  predict.py  train.py
opentutor_classifier/opentutor_classifier/openai/: __init__.py  constants.py  openai_api.py  predict.py  shared.py  train.py
opentutor_classifier/opentutor_classifier/svm/: __init__.py  constants.py  expectations.py  features.py  predict.py  train.py  utils.py
opentutor_classifier/opentutor_classifier_tasks/: __init__.py  tasks.py
opentutor_classifier/svm/: __init__.py  dtos.py  predict.py  train.py  utils.py  word2vec.py
opentutor_classifier/tests/: __init__.py  conftest.py  helpers.py  test_answer_classifier.py  test_answer_classifier2.py  test_classifier_dao.py  test_classifier_factory.py  test_cli.py  test_data_dao.py  test_data_replication  test_data_replication.py  test_data_replication_1.py  test_default_regexp.py  test_extract_config.py  test_features_dao.py  test_length_ratio_feature.py  test_llm.py  test_llm_default.py  test_lr_feature_gen.py  test_regex_aggregate_feature.py  test_sync.py  test_testset_tools.py  test_train_classifier..py  test_train_classifier.py  types.py  utils.py
opentutor_classifier/tests/fixtures/data/Stage_1_Comparisons/: OT_LLM_Comparison.csv
opentutor_classifier/tests/fixtures/data/candles/: config.yaml  test.csv  training.csv
opentutor_classifier/tests/fixtures/data/default/: config.yaml  training.csv
opentutor_classifier/tests/fixtures/data/diode/: config.json  config.yaml  test.csv
opentutor_classifier/tests/fixtures/data/diode_s2/: config.yaml  main.py
opentutor_classifier/tests/fixtures/data/dog_toy/: config.yaml  test.csv  training.csv
opentutor_classifier/tests/fixtures/graphql/: Suicide.json  candles.json  convert_to_csv.py  default.json  example-1.json  example-2.json  ies-mixture.json  ies-rectangle.csv  ies-rectangle.json  ies-television.json  question1-with-unknown-props-in-config.json  question1.json
opentutor_classifier_api/: .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt
opentutor_classifier_api/.circleci/: config.yml
opentutor_classifier_api/src/: entrypoint.sh  manage.py
opentutor_classifier_api/src/opentutor_classifier_api/: __init__.py  config_default.py
opentutor_classifier_api/src/opentutor_classifier_api/blueprints/: __init__.py  check_model.py  delete_model.py  evaluate.py  extract_config.py  healthcheck.py  ping.py  train.py  train_default.py  training_config.py  training_data.py
opentutor_classifier_api/src/opentutor_classifier_tasks/: tasks.py
opentutor_classifier_api/tests/: __init__.py  conftest.py  test_check_model.py  test_cors.py  test_delete_model.py  test_evaluate.py  test_healthcheck.py  test_ping.py  test_train.py  test_train_default.py  utils.py
opentutor_classifier_api/tests/fixtures/graphql/: admin_bad.json  admin_ok.json
serverless/: Dockerfile.evaluate  Dockerfile.extract_config  Dockerfile.train_job  Dockerfile.training_config  Dockerfile.training_data  Makefile  mypy.ini  package-lock.json  pyproject.toml  requirements-evaluate.txt  requirements-extract_config.txt  requirements-train_job.txt  requirements-training_config.txt  requirements-training_data.txt  requirements.txt  serverless.yml
serverless/functions/: check_model.py  delete_model.py  evaluate.py  extract_config.py  train_job.py  train_request.py  train_status.py  training_config.py  training_data.py
serverless/src/: constants.py  requirements.txt  utils.py
(+701 files in other folders)
