[tool.poetry]
name = "opentutor-classifier"
version = "1.0.0"
description = "train and run inference for open tutor"
authors = []

[tool.poetry.dependencies]
python = "^3.8.4"
flake8 = "==3.9.0"
black = "==20.8b1"
mypy = "==v0.782"
licenseheaders = {git = "https://github.com/kycarr/licenseheaders.git"}
pep8-naming = "==0.11.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"