[tool.poetry]
name = "opentutor-classifier"
version = "1.0.0"
description = "train and run inference for open tutor"
authors = []

[tool.poetry.dependencies]
python = "~3.11"
flake8 = "^3.9.0"
black = "^24.3.0"
mypy = "^1.5.1"
licenseheaders = {git = "https://github.com/kycarr/licenseheaders.git"}
pep8-naming = "^0.11.1"
tqdm = "^4.66.3"
joblib = "^1.1.0"
regex = "^2023.8.8"
sentry-sdk = "^1.5.1"
tomlkit = "^0.8.0"
blinker = "^1.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
