[project]
name = "opentutor-classifier"
version = "1.0.0"
description = "train and run inference for open tutor"
authors = []
requires-python = ">=3.11,<3.12"
dependencies = [
    "flake8>=3.9.0,<4",
    "black>=24.3.0,<25",
    "mypy>=1.5.1,<2",
    "licenseheaders",
    "pep8-naming>=0.11.1,<0.12",
    "tqdm>=4.66.3,<5",
    "joblib>=1.1.0,<2",
    "regex>=2023.8.8,<2024",
    "sentry-sdk>=2.8.0,<3",
    "tomlkit>=0.8.0,<0.9",
    "blinker~=1.4",
]

[dependency-groups]
dev = []

[tool.uv]

[tool.uv.sources]
licenseheaders = { git = "https://github.com/kycarr/licenseheaders.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
