[tool]
[tool.poetry]
name = "opentutor_classifier"
version = "1.0.0"
description="train and run inference for open tutor"
authors=[]

[tool.poetry.dependencies]
python = "3.8.4"
celery = "5.1.2"
click = "7.1.2"
gensim = "4.2.0"
numpy = "1.22.4"
pandas = "1.5.3"
pylru = "1.2.1"
python-dotenv = "0.17.1"
pyyaml = "5.4.1"
redis = "3.5.3"
requests = "2.28.2"
scikit-learn = "0.24.2"
scipy = "1.6.3"
text2num = "2.5.0"
werkzeug = "2.2.3"
tok = "0.1.14"
sentry-sdk = "1.20.0"
tomlkit = "0.8.0"
blinker = "1.6.2"

[tool.poetry.dev-dependencies]
coverage = "5.5"
freezegun = "1.2.2"
pip-upgrader = "1.4.15"
pytest = "6.2.5"
pytest-env = "0.6.2"
pytest-mock = "3.10.0"
pytest-only = "1.2.2"
responses = "0.13.4"
tqdm = "4.65.0"
