[tool]
[tool.poetry]
name = "opentutor_classifier"
version = "1.0.0"
description="train and run inference for open tutor"
authors=[]

[tool.poetry.dependencies]
python = "~3.8.4"
celery = "^5.0.5"
click = "<8"
gensim = "^4.0.1"
numpy = "^1.23.0"
pandas = "^1.2.4"
pylru = "^1.2.0"
python-dotenv = "^0.17.1"
pyyaml = "^5.4.1"
redis = "^3.5.3"
requests = "^2.25.1"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
text2num = "^2.2.1"
werkzeug = "^2.0.1"
tok = "^0.1.14"
sentry-sdk = "^1.5.1"
tomlkit = "^0.8.0"
blinker = "^1.4"
boto3 = "1.20.53"
botocore = "1.23.53"
boto3-type-annotations = "^0.3.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
freezegun = "^1.1.0"
pip-upgrader = "*"
pytest = "^6.2.4"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
pytest-only = "^1.2.2"
responses = "^0.13.3"
tqdm = "^4.60.0"
