[project]
name = "opentutor_classifier"
version = "1.0.0"
description = "train and run inference for open tutor"
authors = []
requires-python = ">=3.11,<3.12"
dependencies = [
    "celery>=5.0.5,<6",
    "click>=8.1.7,<9",
    "gensim>=4.0.1,<5",
    "numpy>=1.23.0,<2",
    "pandas>=1.2.4,<2",
    "pylru>=1.2.0,<2",
    "python-dotenv>=0.17.1,<0.18",
    "pyyaml>=6.0.2,<7",
    "redis>=5.0.4,<6",
    "requests>=2.32.3,<3",
    "scikit-learn>=1.2.2,<2",
    "scipy>=1.10.1,<2",
    "text2num>=2.2.1,<3",
    "werkzeug>=3.0.3,<4",
    "tok>=0.1.14,<0.2",
    "sentry-sdk>=1.5.1,<3",
    "tomlkit>=0.8.0,<0.9",
    "blinker~=1.4",
    "boto3==1.35.48",
    "botocore==1.35.48",
    "boto3-type-annotations>=0.3.1,<0.4",
    "openai>=0.27.8,<0.28",
    "backoff>=2.2.1,<3",
    "dataclass-wizard>=0.22.2,<0.23",
    "tiktoken>=0.5.1,<0.6",
]

[dependency-groups]
dev = [
    "coverage~=5.5",
    "freezegun>=1.1.0,<2",
    "pip-upgrader",
    "pytest>=6.2.4,<7",
    "pytest-env>=0.6.2,<0.7",
    "pytest-mock>=3.6.1,<4",
    "pytest-only>=1.2.2,<2",
    "responses>=0.13.3,<0.14",
    "tqdm>=4.66.4,<5",
    "types-PyYAML>=6.0.12,<7",
    "types-requests>=2.32.0,<3",
    "types-python-dateutil>=2.9.0,<3",
]
