[tool]
[tool.poetry]
name = "opentutor_classifier_api"
version = "1.0.0"
description="opentutor_classifier_api"
authors=[]

[tool.poetry.dependencies]
python = "~3.11"
celery = "^5.0.5"
cerberus = "^1.3.4"
flask = "^3.0.3"
flask-cors = "^4.0.1"
gunicorn = "^22.0.0"
python-dotenv = "^0.17.1"
redis = "^5.0.4"
werkzeug = "^3.0.6"
opentutor-classifier = {path = "../opentutor_classifier/dist/opentutor_classifier-1.0.0.tar.gz"}
tok = "^0.1.14"
tqdm = "^4.66.4"
joblib = "^1.1.0"
sentry-sdk = "^1.5.1"
tomlkit = "^0.8.0"
blinker = "^1.4"
dataclass-wizard = "^0.22.2"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pip-upgrader = "*"
pytest = "^6.2.4"
pytest-env = "^0.6.2"
pytest-flask = "^1.2.0"
pytest-mock = "^3.6.1"
pytest-only = "^1.2.2"
requests = "^2.32.3"
responses = "^0.13.3"
