[project]
name = "opentutor_classifier_api"
version = "1.0.0"
description = "opentutor_classifier_api"
authors = []
requires-python = ">=3.11,<3.12"
dependencies = [
    "celery>=5.0.5,<6",
    "cerberus>=1.3.4,<2",
    "flask>=3.0.3,<4",
    "flask-cors>=4.0.1,<5",
    "gunicorn>=22.0.0,<23",
    "python-dotenv>=0.17.1,<0.18",
    "redis>=5.0.4,<6",
    "werkzeug>=3.0.1,<4",
    "opentutor-classifier",
    "tok>=0.1.14,<0.2",
    "tqdm>=4.66.4,<5",
    "joblib>=1.1.0,<2",
    "sentry-sdk>=1.5.1,<2",
    "tomlkit>=0.8.0,<0.9",
    "blinker~=1.4",
    "dataclass-wizard>=0.22.2,<0.23",
]

[dependency-groups]
dev = [
    "coverage~=5.5",
    "pip-upgrader",
    "pytest>=6.2.4,<7",
    "pytest-env>=0.6.2,<0.7",
    "pytest-flask>=1.2.0,<2",
    "pytest-mock>=3.6.1,<4",
    "pytest-only>=1.2.2,<2",
    "requests>=2.32.3,<3",
    "responses>=0.13.3,<0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["opentutor_classifier_api/src/opentutor_classifier_api"]

[tool.uv]

[tool.uv.sources]
opentutor-classifier = { path = "../opentutor_classifier/dist/opentutor_classifier-1.0.0.tar.gz" }
