[tool.poetry]
name = "opentutor-classifier-serverless"
version = "1.0.0"
description = "train and run inference for open tutor"
authors = []

[tool.poetry.dependencies]
python = "~3.8.4"
python-dotenv = "^0.17.1"
requests = "^2.26.0"
boto3 = "1.20.53"
botocore = "1.23.53"
boto3_type_annotations = "^0.3.1"
jsonschema= "4.4.0"
pyjwt = "2.3.0"
urllib3 = "^1.26.6"
tqdm = "^4.52.0"
pyyaml = "^5.4.1"
dataclass-wizard = "^0.22.2"
click = "^7.0.0"
gensim = "^4.0.1"
numpy = "^1.23.0"
pandas = "^1.2.4"
pylru = "^1.2.0"
redis = "^3.5.3"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
text2num = "^2.2.1"
werkzeug = "^2.0.1"
tok = "^0.1.14"
sentry-sdk = "^1.5.1"
tomlkit = "^0.8.0"
blinker = "^1.4"
openai = "^0.27.8"
backoff = "^2.2.1"


[tool.poetry.group.base.dependencies]
python = "~3.8.4"
python-dotenv = "^0.17.1"
boto3 = "1.20.53"
botocore = "1.23.53"
boto3_type_annotations = "^0.3.1"
dataclass-wizard = "^0.22.2"
jsonschema= "4.4.0"
pyjwt = "2.3.0"
pyyaml = "^5.4.1"
requests = "^2.26.0"
tqdm = "^4.52.0"
urllib3 = "^1.26.6"


[tool.poetry.group.evaluate.dependencies]
python = "~3.8.4"
python-dotenv = "^0.17.1"
backoff = "^2.2.1"
blinker = "^1.4"
click = "^7.0.0"
dataclass-wizard = "^0.22.2"
gensim = "^4.0.1"
numpy = "^1.23.0"
openai = "^0.27.8"
pandas = "^1.2.4"
pylru = "^1.2.0"
pyyaml = "^5.4.1"
redis = "^3.5.3"
requests = "^2.26.0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
sentry-sdk = "^1.5.1"
text2num = "^2.2.1"
tok = "^0.1.14"
tomlkit = "^0.8.0"
tqdm = "^4.52.0"
urllib3 = "^1.26.6"
werkzeug = "^2.0.1"
tiktoken = "^0.5.1"


[tool.poetry.group.train.dependencies]
python = "~3.8.4"
python-dotenv = "^0.17.1"
backoff = "^2.2.1"
blinker = "^1.4"
click = "^7.0.0"
dataclass-wizard = "^0.22.2"
gensim = "^4.0.1"
numpy = "^1.23.0"
openai = "^0.27.8"
pandas = "^1.2.4"
pylru = "^1.2.0"
pyyaml = "^5.4.1"
redis = "^3.5.3"
requests = "^2.26.0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
sentry-sdk = "^1.5.1"
text2num = "^2.2.1"
tok = "^0.1.14"
tomlkit = "^0.8.0"
tqdm = "^4.52.0"
urllib3 = "^1.26.6"
werkzeug = "^2.0.1"


[tool.poetry.group.extractconfig.dependencies]
python = "~3.8.4"
python-dotenv = "^0.17.1"
boto3 = "1.20.53"
botocore = "1.23.53"
boto3_type_annotations = "^0.3.1"
dataclass-wizard = "^0.22.2"
gensim = "^4.0.1"
numpy = "^1.23.0"
pandas = "^1.2.4"
pylru = "^1.2.0"
pyyaml = "^5.4.1"
requests = "^2.26.0"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
text2num = "^2.2.1"
tok = "^0.1.14"
tqdm = "^4.52.0"
urllib3 = "^1.26.6"


[tool.poetry.group.trainingconfigdata.dependencies]
python = "~3.8.4"
python-dotenv = "^0.17.1"
dataclass-wizard = "^0.22.2"
numpy = "^1.23.0"
pandas = "^1.2.4"
pyyaml = "^5.4.1"
requests = "^2.26.0"
scikit-learn = "^1.2.2"
tqdm = "^4.52.0"
urllib3 = "^1.26.6"



[tool.poetry.dev-dependencies]
opentutor-classifier = {path = "../opentutor_classifier/dist/opentutor_classifier-1.0.0.tar.gz"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



