[project]
name = "opentutor-classifier-serverless"
version = "1.0.0"
description = "train and run inference for open tutor"
authors = []
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv>=0.17.1,<0.18",
    "requests>=2.32.3,<3",
    "boto3==1.35.48",
    "botocore==1.35.48",
    "boto3_type_annotations>=0.3.1,<0.4",
    "jsonschema==4.4.0",
    "pyjwt==2.8.0",
    "urllib3>=1.26.19,<2",
    "tqdm>=4.66.4,<5",
    "pyyaml>=6.0.2,<7",
    "dataclass-wizard>=0.22.2,<0.23",
    "click>=8.1.7,<9",
    "gensim>=4.0.1,<5",
    "numpy>=1.23.0,<2",
    "pandas>=1.2.4,<2",
    "pylru>=1.2.0,<2",
    "redis>=5.0.4,<6",
    "scikit-learn>=1.2.2,<2",
    "scipy>=1.10.1,<2",
    "text2num>=2.2.1,<3",
    "werkzeug>=3.0.1,<4",
    "tok>=0.1.14,<0.2",
    "sentry-sdk>=1.5.1,<3",
    "tomlkit>=0.8.0,<0.9",
    "blinker~=1.4",
    "openai>=0.27.8,<0.28",
    "backoff>=2.2.1,<3",
]

[dependency-groups]
dev = ["opentutor-classifier"]
base = [
    "python-dotenv>=0.17.1,<0.18",
    "boto3==1.35.48",
    "botocore==1.35.48",
    "boto3_type_annotations>=0.3.1,<0.4",
    "dataclass-wizard>=0.22.2,<0.23",
    "jsonschema==4.4.0",
    "pyjwt==2.8.0",
    "pyyaml>=6.0.1,<7",
    "requests>=2.32.3,<3",
    "tqdm>=4.66.4,<5",
    "urllib3>=1.26.19,<2",
]
evaluate = [
    "python-dotenv>=0.17.1,<0.18",
    "backoff>=2.2.1,<3",
    "blinker~=1.4",
    "click>=8.1.7,<9",
    "dataclass-wizard>=0.22.2,<0.23",
    "gensim>=4.0.1,<5",
    "numpy>=1.23.0,<2",
    "openai>=0.27.8,<0.28",
    "pandas>=1.2.4,<2",
    "pylru>=1.2.0,<2",
    "pyyaml>=6.0.1,<7",
    "redis>=5.0.4,<6",
    "requests>=2.32.3,<3",
    "scikit-learn>=1.2.2,<2",
    "scipy>=1.10.1,<2",
    "sentry-sdk>=1.5.1,<3",
    "text2num>=2.2.1,<3",
    "tok>=0.1.14,<0.2",
    "tomlkit>=0.8.0,<0.9",
    "tqdm>=4.66.4,<5",
    "urllib3>=1.26.19,<2",
    "werkzeug>=3.0.1,<4",
    "tiktoken>=0.5.1,<0.6",
]
train = [
    "python-dotenv>=0.17.1,<0.18",
    "backoff>=2.2.1,<3",
    "blinker~=1.4",
    "click>=8.1.7,<9",
    "dataclass-wizard>=0.22.2,<0.23",
    "gensim>=4.0.1,<5",
    "numpy>=1.23.0,<2",
    "openai>=0.27.8,<0.28",
    "pandas>=1.2.4,<2",
    "pylru>=1.2.0,<2",
    "pyyaml>=6.0.1,<7",
    "redis>=5.0.4,<6",
    "requests>=2.32.3,<3",
    "scikit-learn>=1.2.2,<2",
    "scipy>=1.10.1,<2",
    "sentry-sdk>=1.5.1,<3",
    "text2num>=2.2.1,<3",
    "tok>=0.1.14,<0.2",
    "tomlkit>=0.8.0,<0.9",
    "tqdm>=4.66.4,<5",
    "urllib3>=1.26.19,<2",
    "werkzeug>=3.0.1,<4",
    "tiktoken>=0.5.1,<0.6",
]
extractconfig = [
    "python-dotenv>=0.17.1,<0.18",
    "boto3==1.35.48",
    "botocore==1.35.48",
    "boto3_type_annotations>=0.3.1,<0.4",
    "dataclass-wizard>=0.22.2,<0.23",
    "gensim>=4.0.1,<5",
    "numpy>=1.23.0,<2",
    "pandas>=1.2.4,<2",
    "pylru>=1.2.0,<2",
    "pyyaml>=6.0.1,<7",
    "requests>=2.32.3,<3",
    "scikit-learn>=1.2.2,<2",
    "scipy>=1.10.1,<2",
    "text2num>=2.2.1,<3",
    "tok>=0.1.14,<0.2",
    "tqdm>=4.66.4,<5",
    "urllib3>=1.26.19,<2",
]
trainingconfigdata = [
    "python-dotenv>=0.17.1,<0.18",
    "dataclass-wizard>=0.22.2,<0.23",
    "numpy>=1.23.0,<2",
    "pandas>=1.2.4,<2",
    "pyyaml>=6.0.1,<7",
    "requests>=2.32.3,<3",
    "scikit-learn>=1.2.2,<2",
    "tqdm>=4.66.4,<5",
    "urllib3>=1.26.19,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "base",
    "evaluate",
    "train",
    "extractconfig",
    "trainingconfigdata",
]

[tool.uv.sources]
opentutor-classifier = { path = "../opentutor_classifier/dist/opentutor_classifier-1.0.0.tar.gz" }

[tool.hatch.build.targets.wheel]
packages = ["functions", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



